--- a/src/app/components/modals/confirm/confirm.component.html
+++ b/src/app/components/modals/confirm/confirm.component.html
@@ -3,6 +3,6 @@
   Would you like to delete this task?
 </div>
 <div mat-dialog-actions>
-  <app-button (click)="close()" [buttonText]="'No'"></app-button>
-  <app-button (click)="confirm()" [buttonText]="'Ok'"></app-button>
+  <app-button class="app-btn" (click)="close()" [buttonText]="'No'"></app-button>
+  <app-button class="app-btn" (click)="confirm()" [buttonText]="'Ok'"></app-button>
 </div>
