--- a/src/app/components/select/select.component.html
+++ b/src/app/components/select/select.component.html
@@ -1,8 +1,10 @@
 <mat-form-field appearance="fill">
-  <mat-label>Favorite food</mat-label>
-  <mat-select [(ngModel)]="selectedValue" name="food">
-    <mat-option *ngFor="let food of foods" [value]="food.value">
-      {{food.viewValue}}
+  <mat-label>Sort order</mat-label>
+  <mat-select  [(ngModel)]="selectedValue" name="task" (selectionChange)="selectFn()">
+    <mat-option *ngFor="let task of tasks" [value]="task.value">
+      {{task.viewValue}}
     </mat-option>
   </mat-select>
 </mat-form-field>
+
+<!--(selectionChange)="selectFn()"-->
